# meditherakis-server

./: .gitignore  Cargo.toml  Makefile  docker-compose.inf.yml
migration/src/: lib.rs  m20220101_000001_create_quotes_table.rs
src/: config.rs  lib.rs  main.rs
src/adapters/: db.rs
src/entities/: mod.rs  prelude.rs  quotes.rs
src/routes/: mod.rs  monitoring.rs  quotes.rs
src/schemas/: quotes.rs
