[package]
name = "meditherakis-server"
version = "0.1.0"
authors = ["Gustavo Silva Navarro <gustavo.silva.nav@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
sea-orm = { version = "1.1.2", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
sea-orm-migration = "1.1.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
